--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,25 @@
 {
     "name": "m-s/crud",
+    "type": "crud",
     "description": "Crud Generator",
+    "homepage": "https://github.com/sulaimaan46/Crud_generator_package",
+    "license": "MIT",
     "authors": [
         {
-            "name": "sulai46",
-            "email": "sulaiman@sparkouttech.com"
+            "name": "sulaimaan46",
+            "email": "sulaimaansulai46@gmail.com",
+            "role": "Developer"
         }
     ],
-    "require": {}
+
+    "require": {
+            "php": ">=7.0.0",
+            "laravel" : ">=6.0"
+        },
+        "autoload": {
+            "psr-0": {
+                "Monolog": "src"
+            }
+        }
+
 }
