--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "m-s/crud",
     "type": "crud",
     "description": "Crud Generator",
+    "keywords": ["m-s", "crud"],
     "homepage": "https://github.com/sulaimaan46/Crud_generator_package",
     "license": "MIT",
     "authors": [
@@ -13,13 +14,16 @@
     ],
 
     "require": {
-            "php": ">=7.0.0",
-            "illuminate/support" : ">=6.0"
-        },
-        "autoload": {
-            "psr-0": {
-                "Monolog": "src"
-            }
-        }
+        "php": ">=7.0.0",
+        "illuminate/support" : ">=6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
+    },
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
+    }
 
 }
