--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,29 @@
         "illuminate/support" : ">=6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "orchestra/testbench": "^6.0",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
-        "classmap": [
-            "src/"
-        ]
+        "psr-4": {
+            "HP\\CrudGenrator\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "HP\\CrudGenrator\\": "src"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "HP\\CrudGenrator\\UserAuthServiceProvider"
+            ]
+        }
     }
 
 }
