--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     ],
 
     "require": {
-        "php": ">=7.0.0",
-        "illuminate/support" : ">=6.0"
+        "php": "^7.2",
+        "illuminate/support" : "^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^8.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "~8.0"
     },
     "autoload": {
         "psr-4": {
