--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
                 "HP\\CrudGenrator\\UserAuthServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev"
 
 }
