--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,5 @@
             ]
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
-
+    "minimum-stability": "stable"
 }
