--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 
     "require": {
         "php": "^7.2",
-        "illuminate/support" : "^7.0@dev"
+        "illuminate/support" : "^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0",
