--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,6 @@
             ]
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
