--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "stable",
 
     "require": {
         "php": "^7.2",
@@ -31,17 +32,5 @@
         "psr-4": {
             "HP\\CrudGenrator\\": "src"
         }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "HP\\CrudGenrator\\UserAuthServiceProvider"
-            ]
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
